feat: fix setup of ripe database documentation